# ChangeLog for dev-ruby/rspec-rails
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.53 2012/05/17 10:50:48 tomka Exp $

  17 May 2012; Thomas Kahle <tomka@gentoo.org> rspec-rails-2.6.1-r1.ebuild:
  marked ~x86 per bug 396547

  01 May 2012; Raúl Porcel <armin76@gentoo.org> rspec-rails-1.3.4.ebuild,
  rspec-rails-2.6.1.ebuild:
  Drop ia64/sparc keywords

  07 Feb 2012; Hans de Graaff <graaff@gentoo.org> -rspec-rails-1.2.9.ebuild:
  Remove old version.

  06 Feb 2012; Brent Baude <ranger@gentoo.org> rspec-rails-1.3.4.ebuild:
  Marking rspec-rails-1.3.4 ppc for bug 380041

*rspec-rails-2.6.1-r1 (01 Feb 2012)

  01 Feb 2012; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.6.1-r1.ebuild:
  Revision bump to add ruby19. Drop keywords accordingly, bug 401841.

  06 Dec 2011; Hans de Graaff <graaff@gentoo.org> -rspec-rails-1.3.3.ebuild:
  Remove old version.

  06 Nov 2011; Raúl Porcel <armin76@gentoo.org> rspec-rails-2.6.1.ebuild:
  Add ~sparc wrt #351837

  04 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  rspec-rails-1.3.4.ebuild:
  x86 stable wrt bug #380041

  22 Aug 2011; Tony Vroon <chainsaw@gentoo.org> rspec-rails-1.3.4.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney in bug
  #380041 filed by Hans de Graaff.

  24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> rspec-rails-2.6.1.ebuild:
  Marked ~ppc/~ppc64 wrt #351837

*rspec-rails-1.3.4 (18 Jul 2011)

  18 Jul 2011; Hans de Graaff <graaff@gentoo.org> +rspec-rails-1.3.4.ebuild:
  Version bump.

*rspec-rails-2.6.1 (29 May 2011)

  29 May 2011; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.6.1.ebuild:
  Version bump.

  29 May 2011; Hans de Graaff <graaff@gentoo.org> -rspec-rails-2.4.1.ebuild:
  Remove old version.

*rspec-rails-2.6.0 (13 May 2011)

  13 May 2011; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.6.0.ebuild:
  Version bump.

*rspec-rails-2.5.0 (19 Feb 2011)
