@@ -1,0 +1,39 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/rspec-rails-2.10.1.ebuild,v 1.1 2012/06/10 06:54:07 graaff Exp $
+
+EAPI=2
+
+USE_RUBY="ruby18 ruby19 ree18"
+
+RUBY_FAKEGEM_TASK_TEST=""
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="Changelog.md README.md"
+
+inherit ruby-fakegem
+
+DESCRIPTION="RSpec's official Ruby on Rails plugin"
+HOMEPAGE="http://rspec.info/"
+
+LICENSE="MIT"
+SLOT="2"
+KEYWORDS="~amd64"
+IUSE=""
+
+ruby_add_rdepend "=dev-ruby/activesupport-3*
+	=dev-ruby/actionpack-3*
+	=dev-ruby/railties-3*
+	dev-ruby/rspec:2"
+
+# Depend on the package being already installed for tests, because
+# requiring ammeter will load it, and we need a consistent set of rspec
+# and rspec-rails for that to work.
+ruby_add_bdepend "test? ( >=dev-ruby/ammeter-0.2.5 ~dev-ruby/rspec-rails-${PV} )"
+
+each_ruby_test() {
+	${RUBY} -I lib -S rspec spec || die "Tests failed."
+
+	# There are also features but they require aruba which we don't have
+	# yet and it requires local install of various rails versions.
+}
