@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rspec-rails
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.53 2012/05/17 10:50:48 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec-rails/ChangeLog,v 1.54 2012/06/10 06:54:07 graaff Exp $
+
+*rspec-rails-2.10.1 (10 Jun 2012)
+
+  10 Jun 2012; Hans de Graaff <graaff@gentoo.org> +rspec-rails-2.10.1.ebuild:
+  Version bump. Drop x86 keyword, bug 417587.
 
   17 May 2012; Thomas Kahle <tomka@gentoo.org> rspec-rails-2.6.1-r1.ebuild:
   marked ~x86 per bug 396547
